Fix some alignment issues

--- a/src/components/Button/style.css
+++ b/src/components/Button/style.css
@@ -17,6 +17,7 @@
   background-color: white;
   color: purple;
   border: 2px solid purple;
+  border-radius: 3px;
   height: 39px;
   line-height: 28px;
 }
