--- a/src/components/ListItem/style.css
+++ b/src/components/ListItem/style.css
@@ -1,5 +1,5 @@
 .list-item__container {
-  width: 320px;
+  width: 310px;
   justify-content: space-between;
   padding: 5px 10px 5px 10px;
   border-radius: 5px;
